fixed some bugs

--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landing Page | Portfolio</title>
+    <meta name="description" content="Anggun Caksono | Landing Page">
+    <meta name="keywords" content="Anggun Caksono, Anggun, Caksono, Landing Page, Web Desain, Web Programming, Front End, UI/UX, Portfolio, Keterampilan, Tentang Saya, Hubungi Saya">
+    <meta name="description" content="Anggun Caksono | Landing Page">
+    <link rel="icon" href="src/img/poto.png" type="image/png">
+    <title>Anggun Caksono | Landing Page</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
@@ -67,7 +71,7 @@
                 <div class="w-36 h-10 mx-4 mt-2 lg:mt-0 ">
                     <button id="btn-dropdown" type="button"
                         class="text-white font-sans bg-orange-500 hover:bg-orange-700 rounded-t-lg rounded-b-lg px-2.5 py-2">Selengkapnya
-                        ▼</button>
+                    </button>
                     <div class="bg-orange-50 rounded-b-xl w-[200px] lg:w-40 relative -left-4 lg:-left-2">
                         <ul id="dropdown" class="hidden mt-6 py-1">
                             <li class="group mt-1">
@@ -98,13 +102,13 @@
             <h2 class="font-sans">Mahasiswa | Web Desain</h2>
             <h2 class="mt-4 font-light">Cari tahu apa yang bisa kami bantu untuk Anda.</h2>
             <div class="flex  gap-3 scale-75 md:scale-110 justify-center">
-                <a href="src/CV-Final_Version.pdf" download="CV_Anggun_Caksono" class="mt-8 flex gap-2 w-40 h-10 outline outline-orange-500 hover:bg-orange-500 hover:text-white text-orange-500 font-semibold p-2 rounded-lg lg:scale-90"><box-icon type='solid' class="fill-current" name='file-pdf'></box-icon>Download CV</a>
+                <a href="src/Resume_ANGGUN_CAKSONO.pdf" download="CV_Anggun_Caksono" class="mt-8 flex gap-2 w-40 h-10 outline outline-orange-500 hover:bg-orange-500 hover:text-white text-orange-500 font-semibold p-2 rounded-lg lg:scale-90"><box-icon type='solid' class="fill-current" name='file-pdf'></box-icon>Download CV</a>
             <!-- <a href="#about" class="mt-8 block w-32 bg-orange-500 hover:bg-transparent hover:outline font-semibold hover:text-orange-500 hover:outline-orange-500 text-white p-2 rounded-lg lg:scale-90">Selengkapnya</a> -->
 
                 <!-- dropdow start -->
                 <div class=" w-36 h-[150px] mt-8 font-sans">
                     <button id="btn-dropdown1" type="button"
-                        class="text-white bg-orange-500 hover:bg-orange-700 rounded-t-lg rounded-b-lg px-2.5 py-2">Selengkapnya ▼</button>
+                        class="text-white bg-orange-500 hover:bg-orange-700 rounded-t-lg rounded-b-lg px-2.5 py-2">Selengkapnya</button>
                     <div id="dropdown1" class="bg-orange-50 rounded-xl py-1 mt-1 hidden">
                         <ul  class="block">
                             <li class="group my-1">
@@ -174,7 +178,7 @@
                 <div class="absolute -bottom-[150px] group-hover:bottom-6 duration-300 group-hover:bg-slate-100 group-hover:shadow-md w-[360px] left-3 h-48 rounded-md box-border">
                     <h2 class="text-2xl font-bold text-orange-500 left-[122px] relative">Multitools</h2>
                     <p class="p-4 block text-justify">Website multi fungsi, yang siap membantu berbagai kebutahan Anda secara mudah dan gratis.</p>
-                    <a class="text-white text-lg px-8 py-3 bg-orange-500 relative left-20 rounded-lg hover:bg-orange-800 duration-200 shadow-md" href="http://multitools.me/" target="_blank" rel="noopener noreferrer">Selengkapnya</a>
+                    <a class="text-white text-lg px-8 py-3 bg-orange-500 relative left-20 rounded-lg hover:bg-orange-800 duration-200 shadow-md" href="https://cakson.my.id/multitools" target="_blank" rel="noopener noreferrer">Selengkapnya</a>
                 </div>
             </div>
             </div>
@@ -191,7 +195,7 @@
                     <h2 class="text-2xl font-bold text-orange-500 left-[122px] relative">BacaQU</h2>
                     <p class="p-4 block text-justify">Alquran berbasis web yang mudah diakses
                         dimana saja, kapan saja dan di perangkat apa saja tanpa harus menginstall aplikasi.</p>
-                    <a class="text-white text-lg px-8 py-3 bg-orange-500 relative left-20 rounded-lg hover:bg-orange-800 duration-200 shadow-md" href="http://multitools.me/bacaqu/" target="_blank" rel="noopener noreferrer">Selengkapnya</a>
+                    <a class="text-white text-lg px-8 py-3 bg-orange-500 relative left-20 rounded-lg hover:bg-orange-800 duration-200 shadow-md" href="https://cakson.my.id/bacaqu/" target="_blank" rel="noopener noreferrer">Selengkapnya</a>
                 </div>
             </div>
             </div>
@@ -207,7 +211,7 @@
                 <div class="absolute -bottom-[150px] group-hover:bottom-6 duration-300 group-hover:bg-slate-100 group-hover:shadow-md w-[360px] left-3 h-48 rounded-md box-border">
                     <h2 class="text-2xl font-bold text-orange-500 left-[122px] relative">Mini Portfolio</h2>
                     <p class="p-4 block text-justify">Mini Portfolio yang menggunakan desain glassmorphism. Yang berisi project dan skill.</p>
-                    <a class="text-white text-lg px-8 py-3 bg-orange-500 relative left-20 rounded-lg hover:bg-orange-800 duration-200 shadow-md" href="http://multitools.me/aku/" target="_blank" rel="noopener noreferrer">Selengkapnya</a>
+                    <a class="text-white text-lg px-8 py-3 bg-orange-500 relative left-20 rounded-lg hover:bg-orange-800 duration-200 shadow-md" href="https://cakson.my.id/aku/" target="_blank" rel="noopener noreferrer">Selengkapnya</a>
                 </div>
             </div>
             </div>
@@ -223,7 +227,7 @@
                 <div class="absolute -bottom-[150px] group-hover:bottom-6 duration-300 group-hover:bg-slate-100 group-hover:shadow-md w-[360px] left-3 h-48 rounded-md box-border">
                     <h2 class="text-2xl font-bold text-orange-500 left-[122px] relative">kalkulator</h2>
                     <p class="p-4 block text-justify">kalkulator online yang menggunakan desain glassmorphism agar lebih menarik.</p>
-                    <a class="text-white text-lg px-8 py-3 bg-orange-500 relative left-20 rounded-lg hover:bg-orange-800 duration-200 shadow-md" href="http://multitools.me/kalkulator/" target="_blank" rel="noopener noreferrer">Selengkapnya</a>
+                    <a class="text-white text-lg px-8 py-3 bg-orange-500 relative left-20 rounded-lg hover:bg-orange-800 duration-200 shadow-md" href="https://cakson.my.id/kalkulator/" target="_blank" rel="noopener noreferrer">Selengkapnya</a>
                 </div>
             </div>
             </div>
@@ -239,7 +243,7 @@
                 <div class="absolute -bottom-[150px] group-hover:bottom-6 duration-300 group-hover:bg-slate-100 group-hover:shadow-md w-[360px] left-3 h-48 rounded-md box-border">
                     <h2 class="text-2xl font-bold text-orange-500 left-[122px] relative">LinkMe</h2>
                     <p class="p-4 block text-justify">Halaman yang berisi kumpulan link referensi berbagai sosial media.</p>
-                    <a class="text-white text-lg px-8 py-3 bg-orange-500 relative left-20 rounded-lg hover:bg-orange-800 duration-200 shadow-md" href="http://multitools.me/linkme/" target="_blank" rel="noopener noreferrer">Selengkapnya</a>
+                    <a class="text-white text-lg px-8 py-3 bg-orange-500 relative left-20 rounded-lg hover:bg-orange-800 duration-200 shadow-md" href="https://cakson.my.id/linkme/" target="_blank" rel="noopener noreferrer">Selengkapnya</a>
                 </div>
             </div>
             </div>
