--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Anggun Caksono | Landing Page">
+    <meta name="title" content="Anggun Caksono">
     <meta name="keywords" content="Anggun Caksono, Anggun, Caksono, Landing Page, Web Desain, Web Programming, Front End, UI/UX, Portfolio, Keterampilan, Tentang Saya, Hubungi Saya">
-    <meta name="description" content="Anggun Caksono | Landing Page">
+    <meta name="description" content="Mahasiswa Teknik Informatika yang bermotivasi tinggi dan Pengembang Front End dengan hasrat untuk mempelajari teknologi baru. Saat ini memperluas keahlian di bidang Cloud Computing melalui Kajian Independen Bangkit Academy 2024. Terbukti kemampuannya memecahkan masalah secara....">
     <link rel="icon" href="src/img/poto.png" type="image/png">
     <title>Anggun Caksono | Landing Page</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -142,7 +142,7 @@
         <div class="flex flex-wrap gap-2 justify-center">
         <div class=" px-4 lg:w-[40%] mt-4 bg-white bg-opacity-20 py-2 rounded-lg w-10/12">
         <h1 class="text-center font-semibold text-2xl md:text-3xl">Profile</h1>
-        <h1 class=" font-light mt-1">"Saya seorang mahasiswa Teknik Informatika yang sangat menyukai tentang dunia teknologi, mulai dari Smartphone, Laptop, PC hingga IOT (Internet Of Think)."</h1>
+        <h1 class=" font-light mt-1">"Mahasiswa Teknik Informatika yang bermotivasi tinggi dan Pengembang Front End dengan hasrat untuk mempelajari teknologi baru. Saat ini memperluas keahlian di bidang Cloud Computing melalui Kajian Independen Bangkit Academy 2024. Terbukti kemampuannya memecahkan masalah secara kreatif, berkolaborasi secara efektif, dan membangun aplikasi yang efisien dan scalable."</h1>
         </div>
         <div class="px-4 lg:w-[40%] mt-4 bg-white bg-opacity-20 py-2 rounded-lg w-10/12">
         <h1 class="text-center font-semibold text-2xl md:text-3xl">Mari Berteman</h1>
