fixed some bugs

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="title" content="Anggun Caksono">
-    <meta name="keywords" content="Anggun Caksono, Anggun, Caksono, Landing Page, Web Desain, Web Programming, Front End, UI/UX, Portfolio, Keterampilan, Tentang Saya, Hubungi Saya">
-    <meta name="description" content="Mahasiswa Teknik Informatika yang bermotivasi tinggi dan Pengembang Front End dengan hasrat untuk mempelajari teknologi baru. Saat ini memperluas keahlian di bidang Cloud Computing melalui Kajian Independen Bangkit Academy 2024. Terbukti kemampuannya memecahkan masalah secara....">
+    <meta name="keywords" content="Anggun Caksono, Anggun, Caksono, Landing Page, Web Desain, Web Programming, Front End, UI/UX, Portfolio, Keterampilan, Tentang Saya, Hubungi Saya, Bangkit Academy, Bangkit, Academy, Cloud Computing">
+    <meta name="description" content="Front-End Web Developer dengan hasrat untuk mempelajari teknologi baru. Saat ini memperluas keahlian di bidang Cloud Computing melalui Studi Independen Bangkit Academy 2024. Terbukti kemampuannya memecahkan masalah secara....">
     <link rel="icon" href="src/img/poto.png" type="image/png">
     <title>Anggun Caksono | Landing Page</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -142,11 +142,11 @@
         <div class="flex flex-wrap gap-2 justify-center">
         <div class=" px-4 lg:w-[40%] mt-4 bg-white bg-opacity-20 py-2 rounded-lg w-10/12">
         <h1 class="text-center font-semibold text-2xl md:text-3xl">Profile</h1>
-        <h1 class=" font-light mt-1">"Mahasiswa Teknik Informatika yang bermotivasi tinggi dan Pengembang Front End dengan hasrat untuk mempelajari teknologi baru. Saat ini memperluas keahlian di bidang Cloud Computing melalui Kajian Independen Bangkit Academy 2024. Terbukti kemampuannya memecahkan masalah secara kreatif, berkolaborasi secara efektif, dan membangun aplikasi yang efisien dan scalable."</h1>
+        <h1 class=" font-light mt-1 text-justify">"Mahasiswa Teknik Informatika yang bermotivasi tinggi dan Pengembang Front End dengan hasrat untuk mempelajari teknologi baru. Saat ini memperluas keahlian di bidang Cloud Computing melalui Studi Independen Bangkit Academy 2024. Terbukti kemampuannya memecahkan masalah secara kreatif, berkolaborasi secara efektif, dan membangun aplikasi yang efisien dan scalable."</h1>
         </div>
         <div class="px-4 lg:w-[40%] mt-4 bg-white bg-opacity-20 py-2 rounded-lg w-10/12">
         <h1 class="text-center font-semibold text-2xl md:text-3xl">Mari Berteman</h1>
-        <h1 class="font-light mt-1">Lebih dekat dengan kami dan lebih tau tentang kami. Jangan lupa ikuti sosial media kami.</h1>
+        <h1 class="font-light mt-1 text-justify">Lebih dekat dengan kami dan lebih tau tentang kami. Jangan lupa ikuti sosial media kami.</h1>
         <div class="justify-center mt-3 flex gap-1 mb-4">
             <a class="flex w-9 h-9 justify-center items-center rounded-lg opacity-40 border border-orange-500 hover:opacity-100 hover:bg-orange-500 hover:text-white" href="https://www.instagram.com/alrescha79/"><box-icon type='logo' title="Instagram" name='instagram-alt' class="fill-current"></box-icon></a>
             <a class="flex w-9 h-9 justify-center items-center rounded-lg opacity-40 border border-orange-500 hover:opacity-100 hover:bg-orange-500 hover:text-white" href="https://www.linkedin.com/in/angguncaksono"><box-icon name='linkedin-square' title="LinkedIn" type='logo' class="fill-current"></box-icon></a>
@@ -166,11 +166,10 @@
         <h1 class="text-center font-bold text-orange-500 text-2xl md:text-3xl">Portfolio</h1>
         <h1 class="font-semibold text-center text-3xl md:text-4xl">Project Terbaru</h1>
         <h1 class="text-center my-1">Contoh beberapa project yang telah kami kerjakan.</h1>
-
-        <div class="flex flex-wrap justify-center gap-6 my-6">
+        <div class="flex flex-wrap justify-center gap-6 my-6 ">
             <!-- project 1  start-->
-            <div class="relative w-96 h-72 bg-neutral-200 rounded-xl shadow-slate-50 shadow-lg group hover:h-96 duration-200 ">
-                <div class="absolute w-[360px] h-56 bg-[#ffe4c4] rounded-md top-3 left-3 right-3 group-hover:-top-10 group-hover:scale-[0.8] duration-300 overflow-hidden bg-cover">
+            <div class="relative  w-96  h-72 bg-neutral-200 rounded-xl  shadow-slate-50 shadow-lg group hover:h-96 duration-200 ">
+                <div class="absolute w-[360px]  h-56 bg-[#ffe4c4] rounded-md top-3 left-3 right-3 group-hover:-top-10 group-hover:scale-[0.8] duration-300 overflow-hidden bg-cover">
                     <img src="src/img/multitools.png" alt="">
                     
                 </div>
