fixed some bugs

--- a/index.html
+++ b/index.html
@@ -403,9 +403,9 @@
                 <div class="mb-12 w-full px-4 font-medium text-slate-300 md:w-1/3">
                     <h2 class="mb-5 text-2xl font-bold text-orange-500">ANGGUN CAKSONO</h2>
                     <h3 class="mb-2 text-2xl font-bold">Hubungi Kami</h3>
-                    <a class="flex hover:text-orange-500 gap-1" href="mailto:25alrescha@gmail.com"><box-icon name='envelope' class="fill-current" type='logo'></box-icon>25alrescha@gmail.com</a>
-                    <p>Ngrejeng, Grabagan 62373</p>
-                    <p>Tuban</p>
+                    <a class="flex hover:text-orange-500 gap-1" href="mailto:caksonoanggun@gmail.com"><box-icon name='envelope' class="fill-current" type='logo'></box-icon>caksonoanggun@gmail.com</a>
+                    <p>Tuban, Jawa Timur</p>
+                    <p>Indonesia</p>
 
                 </div>
                 <div class="mb-12 w-full px-4 md:w-1/3">
